<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/operation_new"
        android:icon="@drawable/ic_create_new_folder_white_48px"
        android:title="@string/new_project" />
    <item
        android:id="@+id/operation_open"
        android:icon="@drawable/ic_folder_open_white_48px"
        android:title="@string/open_drawing" />
    <item
        android:id="@+id/operation_save"
        android:icon="@drawable/ic_save_white_48px"
        android:title="@string/save" />
    <item
        android:id="@+id/operation_delete"
        android:icon="@drawable/ic_delete_black_48px"
        android:title="@string/delete_projects" />
    <item
        android:id="@+id/operation_export"
        android:icon="@drawable/ic_image_white_48px"
        android:title="@string/export_image" />
    <item
        android:id="@+id/operation_upload"
        android:icon="@drawable/ic_publish_white_48px"
        android:title="@string/send_to_game_frame" />

</menu>